Issues #224, #226, DB update work.
* For your dev environment, you probably want the following flags
auth.allow_insecure_cookie=true  // session on http
auth.allow_tokenless=true       // ignore CSRF token
* added the CSRF as <meta name="token">
* token should be passed back as "token" in the URI path.
** You can check stdout to see if the server is spotting the token
  ### checking Token ....
* first steps at fixing the db update stuff
** pulled table create into own create_db.sql
** this *should* prevent multiple indexes from being built...
* added db version stamp to meta.
** need to add sql dir update checker for new files & execute.

--- a/config-sample.ini
+++ b/config-sample.ini
@@ -52,6 +52,8 @@ auth.disabled=true
 #auth.audience_from_assertion=false
 # Trim the path off the audience (if present)
 #auth.trim_audience=false
+# Allow the session cookie to work on non https connections
+#auth.allow_insecure_cookie=true
 
 # Set the persona audience address for login
 #persona.audience=http://localhost:8080
